2006-04-21 CTAF <>
	* ct-date : bug at epita (with date +%-d)
	* grepr : exclude svn match (.svn-base)
	* *.grk : move all package file in etc/grk
	* tcshrc : whoami was not found (path error on solaris9)

2006-04-20 CTAF <>
	* shlib : new directory with all shell tools
	* xsession.sh : new shell lib, differ application lanching
	* xsession, xsession.mine : use xsession.sh
	* shelltools.sh : rename ctaftools.sh to shelltools.sh

2006-04-19 CTAF <>
	* mode.emacs : ensure good load even if one .el fail (condition case)

2006-04-17 CTAF <>
	* globalenv : change less option (dont exit on eof, better scrolling, some hilight)
	* ct-installconf, ct-profile : add trap, to correct termcap shit
	* ct-profile : return dont work in standalone mode (return, then exit)

2006-04-16 CTAF <>
	* ctaftools.sh : null_which => which without output
	* globalenv, alias : which => null_which (works in more case, I hope all)
	* ssft.sh : dont load if already loaded
	* emacs : works under native windows version
	* fbmenu.mine : fluxbox user-menu
	* ssft.sh : bug in ssft_check_frontend : correct frontend with dialog
	* ct-profile : quote variable to avoid problem with space

2006-04-15 CTAF <>
	* emacs : alt+left, alt+right change buffer, shift sucked
	* ssft.sh : use $PAGER, set it if unset
	* ct-installconf : call ct-profile
	* ssft.sh : correct a bug with ssft_check_frontend (if dialog dont exist)
	* ct-installconf : create perso/* directory before calling ct-profile
	* globalenv : $SHELL should be set by the shell: unset it
	* globalenv, alias : which => \which (bash which suck)
	* ct-profile : dont kill process when user dont want to modify a value (intregration with ct-installconf)

2006-04-14 CTAF <>
	* ct-installconf : choice between "install all" "ask for each" "choose in a list" method to install pkg
	* ssft.sh : check if the frontend select is good, else choose a good one
	* emacs : console kdb : iso-8859-15 (to test)
	* emacs : shell (sh and csh mode) indentation = 2 space !!!