@@ -31,7 +31,7 @@ _trap_kill ()
 }
 trap _trap_kill INT
 
-
+#PKG FUNCTION
 pkg_description()
 {
   local name=$@
@@ -52,6 +52,7 @@ pkg_install()
 {
   local name=$@
 
+  echo installing package: $name
   eval $name"_install"
   return $?
 }
@@ -79,17 +80,19 @@ pkg_source()
   . $grkdir/"$name".grk
 }
 
+
 #0 installed
 #1 already installed
 #2 failed
 grk_install()
 {
-  local name
-  name=$1
+  local name=$1
+  local inst=$2
   local ret
+
   pkg_source $name
 
-  if pkg_is_installed $name; then
+  if [ x$inst = xno ] || pkg_is_installed $name; then
     ret=1
   else
     if pkg_install $name; then
@@ -104,35 +107,7 @@ grk_install()
   return $ret
 }
 
-grk_ask_install()
-{
-  name=$1
-
-  pkg_source $name
-  if ! pkg_is_installed $name; then
-    if ssft_yesno "Do you want to install $name" "`pkg_description $name`"; then
-      echo "Ask: $name"
-    fi
-  fi
-}
-
-grk_install_list()
-{
-  list=$@
-  for i in $list; do
-    grk_install $i
-    ret=$?
-    if [ x$ret = x0 ]; then
-      echo "Package installed: $i"
-    elif [ x$ret = x1 ]; then
-      echo "Package already installed: $i"
-    else
-      echo "## Package installation failed: $i ##"
-    fi
-  done
-}
-
-
+#list installed pkg
 grk_installed_list()
 {
   ls -1 $grkdir | grep ".grk$" | while read line; do
@@ -143,6 +118,58 @@ grk_installed_list()
     fi
   done
 }
+
+#install all pkg
+grk_install_all()
+{
+  ls -1 $grkdir | grep ".grk$" | while read line; do
+    name=`echo $line | sed -e s/.grk//`
+    pkg_source "$name"
+    grk_install "$name" yes
+  done
+}
+
+#install just those who need, ask for them
+grk_install_ask()
+{
+  ls -1 $grkdir | grep ".grk$" | while read line; do
+    name=`echo $line | sed -e s/.grk//`
+    pkg_source $name
+    if ! pkg_is_installed $name; then
+      if ssft_yesno "Do you want to install $name" "`pkg_description $name`"; then
+        pkg_install $name
+      fi
+    fi
+    pkg_alwaysinstall $name
+  done
+}
+
+grk_install_choice()
+{
+  SSFT_DEFAULT=`grk_installed_list`
+  ssft_select_multiple "Install" "Select packages you want to install" `ls -1 $grkdir | grep ".grk$" | sed -e s/.grk//`
+
+  ls -1 $grkdir | grep ".grk$" | while read line; do
+    name=`echo $line | sed -e s/.grk//`
+    pkg_source $name
+    if echo $SSFT_RESULT | grep $name >/dev/null 2>/dev/null; then
+      pkg_install $name
+    fi
+    pkg_alwaysinstall $name
+  done
+}
+
+grk_help()
+{
+  echo "help"
+  ssft_select_single "Package description" "Select packages you want help for" `ls -1 $grkdir | grep ".grk$" | sed -e s/.grk//`
+  name=$SSFT_RESULT
+  pkg_source $name
+  ssft_display_message "$name description" "`pkg_description $name`"
+}
+
+
+
 
 #############################################################################
 ##START
@@ -182,31 +209,25 @@ export SSFT_FRONTEND=$ctafconf_interface
 
 
 SSFT_DEFAULT=ask
-ssft_select_single "Select one installation method" "'All' install every package, 'Ask' ask your before each package, and 'Choice' let you select packages you want in a list" all ask choice
+ssft_select_single "Select one installation method" "'All' install every package, 'Ask' ask your before each package, and 'Choice' let you select packages you want in a list. If you want information about a package chouse 'information'" all ask choice information
 insmethod=$SSFT_RESULT
 
 ###ASK
 if [ x$insmethod = xask ] ; then
-  ls -1 $grkdir | grep ".grk$" | while read line; do
-    name=`echo $line | sed -e s/.grk//`
-    grk_ask_install $name
-  done
+  grk_install_ask
 fi
 
 ###ALL
 if [ x$insmethod = xall ] ; then
-  ls -1 $grkdir | grep ".grk$" | while read line; do
-    name=`echo $line | sed -e s/.grk//`
-    echo installing $name
-    grk_install $name
-  done
+  grk_install_all
 fi
 
 ###CHOICE
 if [ x$insmethod = xchoice ] ; then
-  SSFT_DEFAULT=`grk_installed_list`
-  ssft_select_multiple "Install" "Select packages you want to install" `ls -1 ~/.ctafconf/etc | grep ".grk$" | sed -e s/.grk//`
-  grk_install_list $SSFT_RESULT
+  grk_install_choice
 fi
 
+if [ x$insmethod = xinformation ] ; then
+  grk_help
+fi
 
