@@ -5,7 +5,7 @@
 ## Login   <goctaf@gmail.com>
 ##
 ## Started on  Fri Sep 30 22:17:33 2005 GESTES Cedric
-## Last update Fri Apr 21 03:38:55 2006 GESTES Cedric
+## Last update Fri Apr 21 04:32:43 2006 GESTES Cedric
 ##
 ##CTAFCONF
 
@@ -17,7 +17,7 @@ var_set param $1
 
 
 #source user profile
-test x$param = "xsh" && test -f ~/.ctafconf/perso/user-profile && . ~/.ctafconf/perso/user-profile
+test x$param = "xsh"  && test -f ~/.ctafconf/perso/user-profile && . ~/.ctafconf/perso/user-profile
 test x$param = "xcsh" && test -f ~/.ctafconf/perso/user-profile.csh && source ~/.ctafconf/perso/user-profile.csh
 
 
